k8s/backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: zerohertzkr/dev:latest
          command:
            - "scripts/local.sh"
          # command:
          #   - "sh"
          #   - "-c"
          #   - "tail -f /dev/null"
          volumeMounts:
            - mountPath: /home/zerohertz/workspace
              name: backend-storage
      volumes:
        - name: backend-storage
          hostPath:
            path: /home/zerohertz/Zerohertz/co-co-gong-server
            type: DirectoryOrCreate
---
apiVersion: v1
kind: Service
metadata:
  name: backend
spec:
  ports:
    - port: 8080
  selector:
    app: backend
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: co-co-gong
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`co-co-gong.zerohertz.xyz`)
      kind: Rule
      services:
        - name: backend
          port: 8080
  tls:
    certResolver: zerohertz-resolver
